# MotionProcessing

./: .gitignore  CMakeLists.txt  ready.sh
code/: main.cpp  root_relative.cpp  test.cpp
